LinkedList to ArrayList migration.